--- a/style.css
+++ b/style.css
@@ -1,23 +1,29 @@
 body {
   text-align: center;
+  background: gray;
 }
 #board {
   width: 300px;
   height: 300px;
-  background-color: gray;
+  /*background-color: gray;*/
   margin-top: 30px;
   margin-bottom: 30px;
+  background-color: inherit;
 }
 
 .square {
-  background-color: yellow;
+  background-color: black;
   width: 94px;
   height: 94px;
   margin: 3px;
+  font-size: 50px;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+
 }
 
 p {
-  font-size: 20px;
-  color: black;
   text-align: center;
+  font-weight: bold;
 }
