--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
   text-align: center;
-  background: gray;
+  background: #878787;
 }
 #board {
   width: 300px;
   height: 300px;
-  /*background-color: gray;*/
   margin-top: 30px;
   margin-bottom: 30px;
   background-color: inherit;
@@ -23,7 +22,14 @@ body {
 
 }
 
-p {
+#footer-ref {
   text-align: center;
   font-weight: bold;
+  color: black;
+}
+#spoiler {
+  text-align: center;
+  font-weight: bold;
+  color: black;
+  font-size: 10px;
 }
